chore: update dependencies and enhance documentation
- Bump Spring Boot version from 4.0.2 to 4.0.3 in build.gradle.kts.
- Update README.md to clarify fallback routing logic and namespace-level fallback configuration.
- Revise example YAML files to reflect the new fallback mechanism and remove deprecated fallbackEnv field.
- Introduce DeploymentReconciler for incremental updates to Istio configurations based on deployment changes.
- Modify IstioConfigService to support namespace-level fallback and improve service status management.

Made-with: Cursor